<resources>
    <!-- Show Profile Activity -->
    <string name="app_name">GoingMAD</string>
    <string name="full_name_label">Full Name</string>
    <string name="nickname_label">Nickname</string>
    <string name="email_label">E-mail Address</string>
    <string name="location_label">Location</string>
    <string name="profile_modified">User profile modified correctly</string>


    <string name="car">Vehicle</string>
    <string name="birth_date">Date of Birth</string>

    <!-- Select picture -->
    <string name="select_from_gallery">Select from gallery</string>
    <string name="take_picture">Take a picture</string>


    <string name="profile_image">Profile Image</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="not_of_age">You are not of age!</string>
    <string name="are_from_future">Are you from future? </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_booked">Booked Users</string>
    <string name="title_interested">Interested Users</string>
    <string name="title_DriverReviewList">Driver Reviews</string>
    <string name="title_PassengerReviewList">Passenger Reviews</string>
    <string name="title_DriverReview">Driver Review</string>
    <string name="title_PassengerReview">Passenger Review</string>
    <string name="title_map">Map</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="bottom_menu_owned">Offered</string>
    <string name="bottom_menu_booked">Booked</string>
    <string name="bottom_menu_interested">Interested in</string>

    <!-- Trip related strings -->
    <string name="departure_location">Departure location</string>
    <string name="short_departure_location">Departure</string>
    <string name="arrival_location">Arrival location</string>
    <string name="short_arrival_location">Arrival</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time">Departure time</string>
    <string name="trip_duration">Estimated trip duration (hours)</string>
    <string name="seats">Number of available seats</string>
    <string name="price">Price</string>
    <string name="euro">€</string>
    <string name="description">Additional information</string>
    <string name="no_description">No additional informations have been provided</string>
    <string name="date_hour_departure">Departure date and time</string>
    <string name="edit_button">Edit</string>
    <string name="accept_button">Accept</string>
    <string name="future_date">You must select a future date</string>
    <string name="edit_trip">Edit trip</string>
    <string name="save">Save</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="your_trip_list">Your trips</string>
    <string name="all_trips">All Trips</string>
    <string name="user_profile">User profile</string>
    <string name="going_mad">Going Mad</string>
    <string name="no_trips">There are no trips available</string>
    <string name="no_booked">There are no booked users yet</string>
    <string name="no_interested">There are no interested users yet</string>
    <string name="alert_image">Alert image</string>
    <string name="trip_details">Trip details</string>
    <string name="trip_edit">Trip edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_seats_available">All seats have already been booked</string>
    <string name="user_already_booked">The user is already booked to this trip</string>
    <string name="already_booked">You are already booked to this trip</string>
    <string name="already_interested">You are already interested to this trip</string>
    <string name="correctly_booked">User correctly booked to this trip</string>
    <string name="correctly_interested">You are now interested to this trip</string>
    <string name="something_wrong">Ops, something went wrong!</string>
    <string name="trip_updated">Trip updated</string>
    <string name="trip_added">New trip added</string>
    <string name="no_additional_information">No additional information</string>


    <!-- Edit Profile Error Strings-->
    <string name="no_departure">A departure location is necessary</string>
    <string name="no_arrival">An arrival location is necessary</string>
    <string name="no_depDate">Departure date and time are necessary</string>
    <string name="no_duration">A trip time estimation is necessary</string>
    <string name="no_seats">The number of seats available is necessary</string>
    <string name="no_price">The price is necessary</string>
    <string name="no_city">City not found</string>

    <string name="file_error">Error occurred while creating the File</string>


    <string name="no_email">The email hasn\'t been set</string>
    <string name="no_nickname">The nickname hasn\'t been set</string>
    <string name="no_fullname">The full name hasn\'t been set</string>
    <string name="no_gender">The gender hasn\'t been set</string>
    <string name="no_location">The location hasn\'t been set</string>
    <string name="no_car">The car hasn\'t been set</string>
    <string name="no_date_of_birth">The birth date hasn\'t been set</string>
    <string name="no_reviews">There are no reviews available</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="show_interested_users">Interested users</string>
    <string name="show_booked_users">Booked users</string>

    <string name="trips_of_interest_label">Trips of interest</string>
    <string name="bought_trips_list_label">Bought trips</string>

    <string name="intermediate_stops">Intermediate stops</string>
    <string name="add">Add</string>

    <!-- Google authentication-->
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="Logging_out">Logging out…</string>
    <string name="book_trip">Book trip</string>
    <string name="hide_trip">Delete trip</string>
    <string name="welcome">Welcome</string>
    <string name="review">Review</string>
    <string name="confirm">Confirm</string>
    <string name="abort">Abort</string>
    <string name="logout">Logout</string>
    <string name="other">Other</string>
    <string name="no_departure_exist">Departure location seems not to exist</string>
    <string name="no_arrival_exist">Arrival location seems not to exist</string>
    <string name="no_intermediate_exist">An Intermediate stop location seems not to exist</string>
    <string name="no_location_selected">No existing location selected</string>

    <string name="finishTrip">Finish trip</string>
    <string name="trip_completed">The trip has been completed</string>
    <string name="trip_already_ended">The trip has already ended</string>
    <string name="trip_ended_no_delete">The trip has already ended, you cannot delete it</string>
    <string name="reviewerName">Reviewer name</string>

    <string name="passengerReviewPrompt">How was the passenger?</string>
    <string name="driverReviewPrompt">How was the driver?</string>
    <string name="publishReview">Publish</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="driver_rating">Driver rating</string>
    <string name="passenger_rating">Passenger rating</string>
    <string name="old_trips">Old Trips</string>
    <string name="to_review">To Review</string>
    <string name="to_do_trips">To Do Trips</string>


    <string name="pending_review">You need to review the driver</string>
    <string name="search_form">Search for trips</string>
</resources>