<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search_form" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchToolbar"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/departureSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departure_location"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/arrivalSearchLabel"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departureSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/arrivalSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/arrival_location"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/durationSearchLabel"
                app:layout_constraintTop_toBottomOf="@+id/departureSearchLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/arrivalSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/durationSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_duration"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/priceSearchLabel"
                app:layout_constraintTop_toBottomOf="@+id/arrivalSearchLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/durationSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/seatsSearchLabel"
                app:layout_constraintTop_toBottomOf="@+id/durationSearchLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/seatsSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seats"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/dateSearchLabel"
                app:layout_constraintTop_toBottomOf="@+id/priceSearchLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seatsSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateSearchLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/departure_date"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/searchConfirm"
                app:layout_constraintTop_toBottomOf="@+id/seatsSearchLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/searchConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/searchCancel"
                app:layout_constraintTop_toBottomOf="@+id/dateSearchLabel" />

            <Button
                android:id="@+id/searchCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abort"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/searchConfirm"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateSearchLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>