<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="bottom"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ImageHeader"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginHorizontal="@dimen/nav_header_spacing_normal"
        android:layout_marginTop="@dimen/nav_header_spacing_normal"
        android:layout_marginBottom="@dimen/nav_header_spacing_small"
        android:alpha="255"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo_carpool" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:textColor="@color/textHeader"
        android:textColorHint="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ImageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ImageHeader"
        app:layout_constraintTop_toTopOf="@+id/ImageHeader" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/nav_header_spacing_normal"
        android:paddingTop="@dimen/nav_header_spacing_small"
        android:paddingBottom="@dimen/nav_header_spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageHeader">

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_nickname"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:textColor="@color/textHeader"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_email"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:textColor="@color/textHeader" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>