<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfileImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/profile_image"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:src="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/setImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/set_profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/editProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/editProfileImage"
        app:layout_constraintStart_toStartOf="@+id/editProfileImage"
        app:layout_constraintTop_toTopOf="@+id/editProfileImage"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/editProfileImage"
        app:layout_constraintVertical_weight="2"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextFullnameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_label"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextGenderLabel"
                app:layout_constraintTop_toBottomOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextGenderLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextNicknameLabel"
                app:layout_constraintTop_toBottomOf="@+id/editTextFullnameLabel"
                android:hint="@string/gender">

                <AutoCompleteTextView
                    android:id="@+id/editTextGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNicknameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_label"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmailLabel"
                app:layout_constraintTop_toBottomOf="@+id/editTextGenderLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextLocationLabel"
                app:layout_constraintTop_toBottomOf="@+id/editTextNicknameLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextLocationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_label"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextCarLabel"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/editTextBirthdateLabel"
                app:layout_constraintTop_toBottomOf="@+id/editTextLocationLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextBirthdateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:paddingTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCarLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:focusable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>